[b]Version 0.5.61[/b] (not released yet):

(2007-09-25)
 * Updated the Hungarian translation.
 * Bugfix: Drag&drop didn't work with *.part files, as the extension
   matched with a subtitle extension (*.rt), so it was tried to be loaded
   as a subtitle.
 * Added help messages for all options in Preferences->General.
 * Updated the Dutch and Polish translations.
 * Added help messages for all options in Preferences->Performance.
 * Added help messages for all options in Preferences->Keyboard and mouse.
 * Updated the Spanish translation.

(2007-09-23)
 * Updated the Romanian translation.
 * Added *.ra to the list of audio files. This fixes bug #1799930.
 * Translated into Spanish the help texts I took from the mplayer manpage
   (in fact I've just took the translations from the Spanish translation of 
   the manpage)

(2007-09-20)
 * Updated the Ukrainian translation.
 * Added new option for command line: -add-to-playlist. If another instance
   of smplayer is found, the specified files will be added to that instance's
   playlist (nothing more will be done). If no other instance is found,
   this option won't do anything, the specified files will be opened as usual
   in a new instance.
 * Removed the option Audio->Channels->Default, as the mplayer default 
   is stereo.

(2007-09-19)
 * Fix: Don't try to connect in main.cpp to another running instance if
   the single instance is disabled! That also means that the command line
   option -send-action won't work in that case.


[b]Version 0.5.60[/b]:
 * Updated the Japanese and French translations.

(2007-09-19)
 * Updated the German translation.
 * (Windows) Maybe a fix to avoid the video to pause when entering in 
   fullscreen and the option "Pause when minimized" is enabled. Not tested
   yet.

(2007-09-18)
 * The playlist will be floating as default.
 * (By user request) Added the option "Pause when minimized" in Preferences->
   General. If checked, the current file will be paused when the main window